--- a/EONFITNESSEMPIRE/MyProject/MyProject/MyProject.csproj
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/MyProject.csproj
@@ -9761,6 +9761,8 @@
     <Content Include="Views\Admin\RenewMemberList.cshtml" />
     <Content Include="Views\Shared\_RenewListNotificationList.cshtml" />
     <Content Include="Views\Shared\_PackageList.cshtml" />
+    <Content Include="Views\Admin\_MemberPaymentList.cshtml" />
+    <Content Include="Views\Admin\MemberPayment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
