--- a/EONFITNESSEMPIRE/MyProject/MyProject/MyProject.csproj
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/MyProject.csproj
@@ -8697,6 +8697,7 @@
     <Content Include="Views\Shared\_PackageList.cshtml" />
     <Content Include="Views\Admin\_MemberPaymentList.cshtml" />
     <Content Include="Views\Admin\MemberPayment.cshtml" />
+    <Content Include="Views\Admin\PaymentCollection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
