publish branch checkin

--- a/EONFITNESSEMPIRE/MyProject/MyProject/Web.config
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Web.config
@@ -95,6 +95,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbGymEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRAFUL\SQLEXPRESS;initial catalog=DbGym;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DbGymEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=XIPL9178;initial catalog=DbGym;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
